crates/tests/src/snapshots/fe_compiler_tests__compile_errors__invalid_chain_field.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: Not a chain field
  ┌─ compile_errors/invalid_chain_field.fe:4:11
  │
4 │     chain.foo
  │           ^^^
  │
  = Note: Only `id` can be accessed on `chain`.


